syntax = "proto3";

package user_proto;

import "google/protobuf/timestamp.proto";

option go_package = ".;user_proto";

service UserService {
    rpc RegisterUser (RegisterUserRequest) returns (RegisterUserResponse);
    rpc AuthenticateUser (AuthenticateUserRequest) returns (AuthenticateUserResponse);
    rpc RefreshToken (RefreshTokenRequest) returns (RefreshTokenResponse);
    rpc UpdateProfile (UpdateProfileRequest) returns (UpdateProfileResponse);
    rpc GetProfile (GetProfileRequest) returns (GetProfileResponse);
}

message RegisterUserRequest {
    string login = 1;
    string password = 2;
    string email = 3;
    string first_name = 4;
    string last_name = 5;
    google.protobuf.Timestamp birth_date = 6;
    string phone_number = 7;
}

message RegisterUserResponse {
    string access_token = 1;
    string refresh_token = 2;
}

message AuthenticateUserRequest {
    string login = 1;
    string password = 2;
}

message AuthenticateUserResponse {
    string access_token = 1;
    string refresh_token = 2;
}

message RefreshTokenRequest {
    string refresh_token = 1;
}

message RefreshTokenResponse {
    string access_token = 1;
    string refresh_token = 2;
}

message UpdateProfileRequest {
    string email = 1;
    string first_name = 2;
    string last_name = 3;
    google.protobuf.Timestamp birth_date = 4;
    string phone_number = 5;
}

message UpdateProfileResponse {}

message GetProfileRequest {}

message GetProfileResponse {
    string login = 1;
    string email = 2;
    string first_name = 3;
    string last_name = 4;
    google.protobuf.Timestamp birth_date = 5;
    string phone_number = 6;
    google.protobuf.Timestamp created_at = 7;
    google.protobuf.Timestamp updated_at = 8;
}